error_tests/unresolved_func_call/expected_error.txt
main.pt:2:10: error:
 2 |   return bar(a + 1);
   |          ~~~
   |          unable to find this function
